--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -9,7 +9,7 @@
                     <div class="col-2 text-right">
                         <i class='fa fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-8">
                         <label for="name" class="d-inline label">Customer Name</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -26,7 +26,7 @@
                     <div class="col-2 text-right">
                         <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-8">
                         <label for="contact" class="d-inline label"> Mobile Number</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -46,7 +46,7 @@
                 <br>
                 <div class="row">
                     <div class="col-2 text-right"><i class='fas fa-rupee-sign icon2 rounded-circle'></i></div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-8">
                         <label for="amount" class="d-inline label"> Amount</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
@@ -62,7 +62,7 @@
                 <br>
                 <div class="row">
                     <div class="col-2 text-right"><i class='fas fa-hand-holding-usd icon2 rounded-circle'></i></div>
-                    <div class="col-4">
+                    <div class="col-sm-4 col-8">
                         <label for="txnType" class="d-inline label">Transaction Type</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
