--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,14 +1,13 @@
 <div class="container-fluid">
     <div style="height: 60px;"></div>
         <div class="row">
-
             <div class="col-sm-3"></div>
-            <div class="col-sm-8">
+            <div class="col-sm-8" style="left: 10px;">
 
                 <div class="row">
 
-                    <div class="col-2"></div>
-                    <div class="col-4 data">
+                    <div class="col-sm-2 col-1"></div>
+                    <div class="col-sm-3 col-4 data">
                         <span class="info">Name</span>
                     </div>
                     <div class="col-1 data">:</div>
@@ -17,8 +16,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-4 data">
+                    <div class="col-sm-2 col-1"></div>
+                    <div class="col-sm-3 col-4 data">
                         <span class="info">Phone</span>
                     </div>
                     <div class="col-1 data">:</div>
@@ -27,8 +26,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-4 data">
+                    <div class="col-sm-2 col-1"></div>
+                    <div class="col-sm-3 col-4 data">
                         <span class="info">Shop-Name</span>
                     </div>
                     <div class="col-1 data">:</div>
@@ -37,8 +36,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-4 data">
+                    <div class="col-sm-2 col-1"></div>
+                    <div class="col-sm-3 col-4 data">
                         <span class="info">Lender-Id</span>
                     </div>
                     <div class="col-1 data">:</div>
@@ -52,7 +51,7 @@
                         <a class="cancel" href="http://localhost:4200/home">
                             Cancel </a>
                     </div>
-                    <div class="col-sm-4 col-6 data text-right" style="left: 15px;">
+                    <div class="col-sm-4 col-6 data text-right" style="left: 10px;">
                         <button [routerLink]="['/editAccount']" class="btn confirmBtn border border-dark"><a> Edit
                             </a></button>
                     </div>
