--- a/src/app/edit-customer/edit-customer.component.css
+++ b/src/app/edit-customer/edit-customer.component.css
@@ -10,8 +10,11 @@
 .btnDiv {
     left: 30px;
 }
+.inputDiv {
+    right: 30px;
+}
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 580px) {
     .cancel{
         font-size: 15px;
     }
@@ -19,8 +22,12 @@
     .label {
         font-size: 16px;
         width: 100%;
+        
     }
 
+    .lbl {
+        right: 14px;
+    }
     .icon2{
         font-size: 16px;
     }
@@ -33,5 +40,9 @@
     }
     .btnDiv {
         left: 130px;
+    }
+
+    .inputDiv {
+        right: 0;
     }
 }
