--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,7 +6,7 @@
     color: green;
 }
 
-.id2 {
+.id2, pre {
     text-align: center;
     font-weight: bold;
     color: #46afec;
@@ -24,6 +24,7 @@
     min-width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    right:0
 }
 
 .dropdown-content a {
@@ -54,7 +55,11 @@
 @media screen and (max-width: 540px) {
     img {
         height: 30px;
-        margin-right: 3px;
+    }
+
+    .logo-color::before {
+        content: "\A";
+        white-space: pre;
     }
     .id2 {
         font-size: 18px;
@@ -71,13 +76,11 @@
 @media screen and (max-width: 460px) {
     img {
         height: 31px;
-        margin-right: 10px;
     }
     .id2 {
         font-size: 17px;
         color: #46afec;
     }
-
     .dropdown-content {
         font-size: 15px;
     }
