--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -105,9 +105,9 @@
                     <p class="text-center"><strong>Select Start Date and End Date</strong><br /></p>
                     <div class="actionsBtns text-center">
                         <div class="col-sm-12 text-center">
-                            <input type="date" id="startDate" name="startDate" value="2012-10-08" class="date inp"
+                            <input type="date" id="startDate" name="startDate" value="2012-10-08" class="date inp mobile-margin"
                                 [(ngModel)]="startDate" aria-label="Search" autofocus /> to <input type="date"
-                                id="endDate" name="endDate" value="2012-10-08" class="date inp" [(ngModel)]="endDate"
+                                id="endDate" name="endDate" value="2012-10-08" class="date inp mobile-margin" [(ngModel)]="endDate"
                                 aria-label="Search" autofocus />
                         </div>
                         <br>
