--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -128,7 +128,7 @@
         </table>
     </div>
     <br>
-    <div class="col-sm-12 text-center" style="color: #46afec;">
+    <div class="col-sm-12 text-center mobile-sm" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 
