--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
         <div class="col-10">
             <div class="row">
                 <div class="col-2 img mr-3">
-                    <img [routerLink]="['/home']" class="logo" src="../../assets/image1.png" alt="logo">
+                    <img [routerLink]="['/home']" class="logo hand" src="../../assets/image1.png" alt="logo">
                 </div>
                 <div *ngIf="headerData.isIcon" class="col-7 item">
                     <h5 class="logoColor border border-dark rounded p-2"> <span class="val">
