--- a/src/app/home/customers/customers.component.css
+++ b/src/app/home/customers/customers.component.css
@@ -29,53 +29,14 @@ table {
 	word-wrap: break-word;
 }
 
-/* table tr {
-	background-color: #f8f8f8;
-	border: 1px solid #ddd;
-	padding: .35em;
-  }
-  
-  table th,
-  table td {
-	padding: .625em;
-	text-align: center;
-  }
-  
-  table th {
-	font-size: .85em;
-	letter-spacing: .1em;
-	text-transform: uppercase;
-  } */
-
-/* end */
+.btn-reset {
+	color: #46afec;
+	cursor: pointer;
+}
 
 .delete {
 	color: rgb(250, 94, 94);
 }
-
-/* .name {
-	width: 20%;
-}
-
-.phone {
-	width: 20%;
-}
-
-.txn {
-	width: 20%;
-}
-
-.date {
-	width: 25%;
-}
-
-.edit {
-	width: 15%;
-}
-
-.icon-color {
-	color: #46afec;
-} */
 
 .btn-size {
 	width: 50px;
@@ -94,11 +55,11 @@ div.space {
 	margin-bottom: 10px;
 }
 
-.edit-margin{
+.edit-margin {
 	margin-left: 70px;
 }
 
-.delete-margin{
+.delete-margin {
 	margin-left: 20px;
 }
 
@@ -111,22 +72,22 @@ div.space {
 }
 
 @media screen and (max-width: 768px) {
-	
-	.edit-margin{
+	.mobile-sm {
+		text-align: center;
+		font-size: 12px;
+	}
+	.edit-margin {
 		margin-left: 140px;
 		margin-right: 0px;
 	}
-	
-	.delete-margin{
+	.delete-margin {
 		margin-left: 0px;
 		margin-right: 0px;
 		text-align: right;
 	}
-
 	table {
 		border: 0;
 	}
-
 	table thead {
 		border: none;
 		clip: rect(0 0 0 0);
