--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class=" row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-8 block" style="right: 25px;">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-8 block">
 
             <br><br><br>
             <div class="row">
