--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,24 +9,24 @@
                 </div>
             </a>
         </div>
-        <div class="col-2 d-flex d-sm-none">
+        <div class="col-1 d-flex d-sm-none">
             <a (click)="goBack()">
                 <div class="hand back-btn">
                     <i class="fa fa-arrow-circle-left" aria-hidden="true" style="font-size: 18px;"></i>
                 </div>
             </a>
         </div>
-        <div class="col-10">
+        <div class="col-11 col-sm-10">
             <div class="row">
-                <div class="col-2 img mr-3">
+                <div class="col-2 img">
                     <img [routerLink]="['/home']" class="logo" src="../../assets/image1.png" alt="logo">
                 </div>
-                <div *ngIf="headerData.isIcon" class="col-7 item">
+                <div *ngIf="headerData.isIcon" class="col-8 col-sm-7 item">
                     <h5 class="logoColor border border-dark rounded p-2"> <span class="val">
                             <i class='fas fa-user icon mt-1 d-inline'></i>&nbsp; <p class="d-inline">{{headerData.title}}</p></span>
                     </h5>
                 </div>
-                <div *ngIf="headerData.isIcon==false" class="col-7 item">
+                <div *ngIf="headerData.isIcon==false" class="col-8 col-sm-7  item">
                     <h5 class="logoColor border border-dark rounded p-2">
                         {{headerData.title}}
                     </h5>
