--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -47,11 +47,11 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-4 text-right pt-2 data"  style="left: 15px;">
+                    <div class="col-5 text-center pt-2 data"  style="left: 25px;">
                         <a class="cancel" href="http://localhost:4200/home">
                             Cancel </a>
                     </div>
-                    <div class="col-sm-4 col-6 data text-right" style="left: 10px;">
+                    <div class="col-sm-5 col-6 data text-center">
                         <button [routerLink]="['/editAccount']" class="btn confirmBtn border border-dark"><a> Edit
                             </a></button>
                     </div>
