--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -1,31 +1,29 @@
 <div class="container-fluid">
     <div class=" row">
-        <div class="col-sm-3"></div>
+        <div class="col-md-3"></div>
 
-        <div class="col-sm-9">
+        <div class="col-md-9 text center block">
             <div class="row mt-2">
                 <div class="col-2"></div>
 
-                <div class="col-sm-3 col-11 w-100 text-center fix logoColor border border-dark rounded"> <i
+                <div class="col-md-3 col-7 text-center fix logoColor border border-dark rounded"> <i
                         class="fa fa-phone fa-flip-horizontal mr-1 icon" aria-hidden="true"></i><span class="val pb-1">
                         {{borrowerPhone}}</span>
                 </div>
-                <div class="col-sm-1"></div>
-                <div class="col-sm-2 col-11 text-center logoColor border fix border-dark rounded" *ngIf="balance>='0'"
-                    style="background-color: rgb(24, 170, 24); right: 30px;"> <span class="val">
+                <div class="col-md-1 col-2"></div>
+                <div class="col-md-2 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance>='0'"
+                    style="background-color: rgb(24, 170, 24); right: 16px;"> <span class="val">
                         <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
                 </div>
-                <div class="col-sm-2 col-11 text-center logoColor border fix border-dark rounded" *ngIf="balance<'0'"
-                    style="background-color: #F44336; right: 30px;"> <span class="val">
+                <div class="col-md-2 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance<'0'"
+                    style="background-color: #F44336; right: 16px;"> <span class="val">
                         <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
                 </div>
             </div>
         </div>
-        <div class="col-sm-1"></div>
-
         <div class="col-sm-2"></div>
 
-        <div class="col-sm-8">
+        <div class="col-sm-9">
             <br><br><br><br>
             <div class="row">
                 <div class="col-sm-12 text-center">
@@ -33,7 +31,7 @@
                         <div class="row">
                             <div class="col-sm-3">
                             </div>
-                            <div class="col-sm-2 text-left">
+                            <div class="col-sm-3 label">
                                 <label for="name" class="d-inline label">Credit
                                     type <p class="mandatory d-inline"> * </p>
                                     :</label>
@@ -54,7 +52,7 @@
                         <div class="row">
                             <div class="col-sm-3">
                             </div>
-                            <div class="col-sm-2 text-left">
+                            <div class="col-sm-3 label">
                                 <label for="amount" class="d-inline label"> Amount <p class="mandatory d-inline">* </p>
                                     :</label>
                             </div>
