--- a/src/app/editmy-account/editmy-account.component.html
+++ b/src/app/editmy-account/editmy-account.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div style="height: 50px;"></div>
     <div class="row">
-        <div class="col-2 col-sm-3"></div>
+        <div class="col-2 col-lg-3"></div>
         <div class="col-10 col-sm-9">
             <div class="row">
-                <div class="col-sm-2"></div>
+                <div class="col-sm-1"></div>
                 <div class="col-sm-4">
                     <label for=name class="info">Name :</label>
                     <p class="mandatory d-inline"> *</p>
@@ -58,11 +58,11 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-4 text-center">
+                <div class="col-5 col-xl-4 text-center">
                     <a class="cancel mt-4" [routerLink]="['/myaccount']">
                         Cancel </a>
                 </div>
-                <div class="col-4 text-right">
+                <div class="col-5 col-lg-4 text-center">
                     <button (click)="update()" [disabled]="!newlenderName || !newlenderShopName || !newlenderPhone"
                         class="btn confirmBtn border border-dark"><a> Update </a></button>
                 </div>
