--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="col-sm-7">
                             <input class="w-100" [(ngModel)]="password" id="password"
-                                [className]="isValid? 'form-control': 'form-control invalidInput'" type="password"
+                                [className]="isValid? 'form-control': 'form-control invalid'" type="password"
                                 name="password" required>
                             <div [className]="isValid? 'valid': 'invalidEntry'"><span style="margin-top: 5px;">Invalid
                                     input Id / Password !</span></div>
