--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -48,7 +48,7 @@
                 <br>
                 <div class="row">
                     <div class="col-5 text-center pt-2 data"  style="left: 25px;">
-                        <a class="cancel" href="http://localhost:4200/home">
+                        <a class="cancel" [routerLink]='["/home"]'>
                             Cancel </a>
                     </div>
                     <div class="col-sm-5 col-6 data text-center">
