--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="dropdown"><img [src]="LOGO4" /><a class="logo-color dropbtn" href="/home/profile"
                 [routerLink]='["/home"]'> Profile </a>
             <div class="dropdown-content">
-                <a href="http://localhost:4200/myaccount">My Account</a>
+                <a [routerLink]='["/myaccount"]'>My Account</a>
                 <a href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
             </div>
         </div>
