--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -106,9 +106,11 @@
                     <div class="actionsBtns text-center">
                         <div class="col-sm-12 text-center">
                             <input type="date" id="startDate" name="startDate" value="2012-10-08"
-                                class="date inp mobile-margin" [(ngModel)]="startDate" aria-label="Search" autofocus />
+                                placeholder="2012-10-08" class="date inp mobile-margin" [(ngModel)]="startDate"
+                                aria-label="Search" autofocus />
                             to <input type="date" id="endDate" name="endDate" value="2012-10-08"
-                                class="date inp mobile-margin" [(ngModel)]="endDate" aria-label="Search" autofocus />
+                                placeholder="2012-10-09" class="date inp mobile-margin" [(ngModel)]="endDate"
+                                aria-label="Search" autofocus />
                         </div>
                         <br>
                         <div class="text-center">
