--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -22,7 +22,8 @@
             <button type="submit" class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
                 (click)="onSubmit(); isReset=true"><i class="fa fa-search" aria-hidden="true"></i></button>
             &nbsp;
-            <a *ngIf='isReset==true' class="btn-reset" href="" (click)='getListAtStart(); isSearch=false'>Reset</a>
+            <a *ngIf='isReset==true' class="btn-reset" href="" (click)='getListAtStart(); isSearch=false'
+                onclick="document.getElementById('txn').value = ''; document.getElementById('name').value='';  document.getElementById('phone').value=''">Reset</a>
         </div>
     </div>
 
@@ -128,7 +129,7 @@
         </table>
     </div>
     <br>
-    <div class="col-sm-12 text-center mobile-sm" style="color: #46afec;">
+    <div class="col-12 text-center mobile-sm" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 
