--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -43,7 +43,7 @@
                     <br>
                     <div class="row">
                         <div class="col-9">
-                            <span class=""><a class="logo-color" href="#">Forgot Password?</a></span>
+                            <span class=""><a class="logo-color" [routerLink]="['/forgot-password']">Forgot Password?</a></span>
                         </div>
                         <div class="col-3 text-right">
                             <button (click)="login()" type="submit" class=" btn confirmBtn border border-dark">
