--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div style="height: 120px;"></div>
     <div class="row">
         <div class="col-sm-4 col-0"></div>
@@ -52,7 +52,6 @@
                         </div>
                     </div>
                 </form>
-            
         </div>
     </div>
 </div>
