--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -1,16 +1,15 @@
-<div class="container-fluid">
+<div class="container">
     <div class=" row">
-        <div class="col-md-3"></div>
-
-        <div class="col-md-9 text center block">
+        <div class="col-1 col-md-2"></div>
+        <div class="col-sm-10 block">
             <div class="row mt-2">
                 <div class="col-2"></div>
 
-                <div class="col-md-3 col-7 text-center fix logoColor border border-dark rounded"> <i
+                <div class="col-md-3 col-7 text-center fix logoColor border border-dark rounded align"> <i
                         class="fa fa-phone fa-flip-horizontal mr-1 icon" aria-hidden="true"></i><span class="val pb-1">
                         {{borrowerPhone}}</span>
                 </div>
-                <div class="col-md-1 col-2"></div>
+                <div class="col-md-2 col-2"></div>
                 <div class="col-md-2 col-7 text-center logoColor border fix border-dark rounded" *ngIf="balance>='0'"
                     style="background-color: rgb(24, 170, 24); right: 16px;"> <span class="val">
                         <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
