--- a/src/app/add-customer/add-customer.component.css
+++ b/src/app/add-customer/add-customer.component.css
@@ -29,7 +29,9 @@
 .inputDiv {
     height: 35px;
 }
-
+.block {
+    left: 1%;
+}
 
 /* Chrome, Safari, Edge, Opera 
 To remove the spnners/ arrows from input field type "number" */
@@ -47,4 +49,8 @@ input::-webkit-inner-spin-button {
     .label {
         font-size: 17px;
     }
+    .block {
+        left: 0%;
+    }
+    
 }
