--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container">
     <div class=" row">
         <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+        <div class="col-sm-8 block">
             <form [formGroup]='customerForm' (ngSubmit)="onSubmit()">
                 <br><br><br>
 
