--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -1,42 +1,42 @@
-<div class="container-fluid">
+<div class="container">
     <div class=" row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-8 block">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10 block">
 
             <br><br><br>
             <div class="row">
-                <div class="col-sm-1 col-2 text-right">
+                <div class="col-sm-2 col-2 text-right">
                     <i class='fa fa-user icon2 mt-1 ml-3'></i>
                 </div>
-                <div class="col-sm-4 lbl col-10">
+                <div class="col-sm-3 lbl col-10">
                     <label for="name" class="d-inline label">New Name</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
-                <div class="col-sm-4 col-12 inputDiv">
+                <div class="col-sm-4 col-12">
                     <input class="rounded w-100 inp" type="text" id="name" name="name" placeholder="Enter New Name"
                         [(ngModel)]="customerName">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-sm-1 col-2 text-right">
+                <div class="col-sm-2 col-2 text-right">
                     <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                 </div>
-                <div class="col-sm-4 lbl col-10">
+                <div class="col-sm-3 lbl col-10">
                     <label for="contact" class="d-inline label">New Mobile Number</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
-                <div class="col-sm-4 inputDiv">
+                <div class="col-sm-4">
                     <input class="rounded w-100 inp" type="text" id="phone" name="phone"
                         placeholder="Enter New Mobile Number" [(ngModel)]="customerPhone" required>
                 </div>
             </div>
             <br><br><br>
             <div class="row">
-                <div class="col-3 text-center pt-2 cancel">
+                <div class="col-5 text-center pt-2 cancel">
                     <a class="logo-color" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
                 </div>
-                <div class="col-4 btnDiv text-right">
+                <div class="col-6  col-sm-4 text-right">
                     <button (click)='onSubmit()' type="submit"
                         class="btn confirmBtn text-right border border-dark nav-item nav-link-edit" [disabled]="!customerName || !customerPhone" data-toggle="modal"
                         data-target="#successModal">Update</button>
