--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="headerData.isHeader" class="container block">
     <div style="height: 50px;"></div>
-
     <div class="row">
         <div class="col-2 text-right d-none d-sm-flex">
             <a (click)="goBack()">
@@ -23,7 +22,8 @@
                 </div>
                 <div *ngIf="headerData.isIcon" class="col-8 col-sm-7 item">
                     <h5 class="logoColor border border-dark rounded p-2"> <span class="val">
-                            <i class='fas fa-user icon mt-1 d-inline'></i>&nbsp; <p class="d-inline">{{headerData.title}}</p></span>
+                            <i class='fas fa-user icon mt-1 d-inline'></i>&nbsp; <p class="d-inline">
+                                {{headerData.title}}</p></span>
                     </h5>
                 </div>
                 <div *ngIf="headerData.isIcon==false" class="col-8 col-sm-7  item">
