--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     <div style="height: 60px;"></div>
         <div class="row">
             <div class="col-sm-3"></div>
