--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div style="height: 120px;"></div>
     <div class="row">
-        <div class="col-sm-4 col-0"></div>
-        <div class="col-sm-4 col-12 block">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6">
             <div class="row">
-                <div class="col-9">
+                <div class="col-sm-9">
                     <h2 class="">
                         <img src="../../assets/image1.png"> Login
                     </h2>
                 </div>
-                <div class="col-3">
+                <div class="col-sm-3 text-right">
                     <button class="btn confirmBtn border border-dark signUp" [routerLink]="['/sign-up']">SignUp
                     </button>
                 </div>
@@ -42,10 +42,10 @@
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-9">
+                        <div class="col-sm-9">
                             <span class=""><a class="logo-color" [routerLink]="['/forgot-password']">Forgot Password?</a></span>
                         </div>
-                        <div class="col-3 text-right">
+                        <div class="col-sm-3 text-right">
                             <button (click)="login()" type="submit" class=" btn confirmBtn border border-dark">
                                 Login
                             </button>
