--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,16 +1,14 @@
 <div class="container">
-    <div style="height: 60px;"></div>
+    <div style="height: 50px;"></div>
         <div class="row">
             <div class="col-sm-3"></div>
-            <div class="col-sm-8" style="left: 10px;">
-
-                <div class="row">
-
+            <div class="col-sm-7">
+                <div class="row box">
                     <div class="col-sm-2 col-1"></div>
                     <div class="col-sm-3 col-4 data">
                         <span class="info">Name</span>
                     </div>
-                    <div class="col-1 data">:</div>
+                    <div class="col-2 data">:</div>
                     <div class="col-5 data">
                         <span>{{name}}</span>
                     </div>
@@ -20,7 +18,7 @@
                     <div class="col-sm-3 col-4 data">
                         <span class="info">Phone</span>
                     </div>
-                    <div class="col-1 data">:</div>
+                    <div class="col-2 data">:</div>
                     <div class="col-5 data">
                         <span>{{phone}}</span>
                     </div>
@@ -30,7 +28,7 @@
                     <div class="col-sm-3 col-4 data">
                         <span class="info">Shop-Name</span>
                     </div>
-                    <div class="col-1 data">:</div>
+                    <div class="col-2 data">:</div>
                     <div class="col-5 data">
                         <span>{{shopName}}</span>
                     </div>
@@ -40,7 +38,7 @@
                     <div class="col-sm-3 col-4 data">
                         <span class="info">Lender-Id</span>
                     </div>
-                    <div class="col-1 data">:</div>
+                    <div class="col-2 data">:</div>
                     <div class="col-5 data">
                         <span>{{lenderId}}</span>
                     </div>
@@ -48,7 +46,7 @@
                 <br>
                 <div class="row">
                     <div class="col-5 text-center pt-2 data"  style="left: 25px;">
-                        <a class="cancel" [routerLink]='["/home"]'>
+                        <a class="cancel" [routerLink]='["/home"]'  >
                             Cancel </a>
                     </div>
                     <div class="col-sm-5 col-6 data text-center">
